# kamui

./: .env.example  CLAUDE.md  Cargo.toml  NOTES.md  README.md  ROADMAP.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: chat.rs  compaction.rs  config.rs  context.rs  main.rs  mcp.rs  onboarding.rs  prompt.rs  storage.rs  tools.rs
src/provider/: mod.rs  openai.rs
