[package]
name = "kamui"
version = "0.1.0"
edition = "2024"
description = "Provider-agnostic LLM chat CLI"
license = "MIT"
repository = "https://github.com/algonacci/kamui"
readme = "README.md"
keywords = ["ai", "cli", "llm", "openai"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.104"
arboard = { version = "3.4", features = ["image-data"] }
async-trait = "0.1.89"
base64 = "0.22"
png = "0.17"
chrono = "0.4.42"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
directories = "6.0.0"
ignore = "0.4"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
rmcp = { version = "0.8", features = ["client", "transport-child-process"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.8.19"
tokio = { version = "1.53.1", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }

[profile.release]
lto = "thin"
strip = true
